force-app/main/default/objects/Error_Log_Event__e/Error_Log_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used to capture error details during a transaction &amp; store it in a Error Log object.</description>
    <label>Error Log Event</label>
    <pluralLabel>Error Log Event</pluralLabel>
</CustomObject>