force-app/main/default/objects/Error_Log_Event__e/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>This field is used to store entire error information</description>
    <label>Error Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>