force-app/main/default/objects/Error_Log_Event__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>This field is used to store the object name for which the exception occurred.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>