force-app/main/default/objects/Error_Log_Event__e/fields/Short_Error__c.field-meta.xml
<CustomField>
    <fullName>Short_Error__c</fullName>
    <description>This field is used to log brief overview of the exception</description>
    <label>Short Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>